<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/pading_8dp"
    android:paddingTop="@dimen/pading_8dp">

    <ImageView
        android:id="@+id/imageUrl"
        android:layout_width="@dimen/layout_width_45dp"
        android:layout_height="@dimen/layout_height_45dp"
        android:src="@drawable/test_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pading_8dp">

        <TextView
            style="@style/trackNameStyle"
            android:id="@+id/nameTrack"
            tools:text="@string/nameTrack2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/artistTrackStyle"
                android:id="@+id/nameArtist"
                tools:text="@string/artistTrack2" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_1"
                android:layout_gravity="center"/>

            <TextView
                style="@style/timeTrackStyle"
                android:id="@+id/timeTrack"
                tools:text="@string/timeTrack2" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        style="@style/imageFrontArrowStyle"
        android:src="@drawable/arrowforvard" />


</LinearLayout>