<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".player.ui.activity.AudioPlayerActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/constraintGuide_begin_20dp"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/constraintGuide_end_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/playButton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorderForText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/constraintGuide_end_16dp"
        app:layout_constraintTop_toTopOf="@+id/durationTime"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorderForText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/constraintGuide_begin_16dp"
        app:layout_constraintTop_toTopOf="@id/durationName"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        style="@style/arrowBackStyle"
        android:id="@+id/backToTrackList"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAlbum"
        android:layout_width="0dp"
        android:layout_height="312dp"
        android:layout_marginTop="@dimen/margin_top_46dp"
        android:src="@drawable/playerplaceholder"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/backToMedia" />

    <TextView
        style="@style/playerTextView"
        android:id="@+id/trackName"
        android:text="Yesterday (Remastered 2009)"
        android:textSize="@dimen/text_size_22sp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:layout_marginTop="@dimen/margin_top_24dp"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/imageAlbum" />
    <TextView
        style="@style/playerTextView"
        android:id="@+id/artistName"
        android:text="The Beatles "
        android:ellipsize="end"
        android:lines="1"
        android:textSize="@dimen/text_size_14sp"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintStart_toStartOf="@id/trackName"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        android:layout_marginTop="@dimen/margin_top_12dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/floatingButton"
        android:id="@+id/addButton"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:srcCompat="@drawable/pluse"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:contentDescription="@drawable/pluse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/floatingButton"
        android:id="@+id/likeButton"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:srcCompat="@drawable/heart"
        android:contentDescription="@drawable/heart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/play_button"
        android:id="@+id/playButton"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintEnd_toStartOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:srcCompat="@drawable/baseline_play_arrow_24"
        android:contentDescription="@drawable/baseline_play_arrow_24" />


    <TextView
        android:id="@+id/trackTimeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.33dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="@id/playButton"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        style="@style/titlesTextView"
        android:id="@+id/durationName"
        android:text="@string/duration"
        android:layout_marginTop="@dimen/margin_top_39dp"
        app:layout_constraintStart_toEndOf="@id/leftBorderForText"
        app:layout_constraintTop_toBottomOf="@id/trackTimeNow" />

    <TextView
        style="@style/titlesAttributeTextView"
        android:id="@+id/durationTime"
        android:layout_marginTop="39dp"
        android:text="04:55"
        app:layout_constraintEnd_toStartOf="@id/rightBorderForText"
        app:layout_constraintTop_toBottomOf="@id/trackTimeNow" />
    <TextView
        style="@style/titlesTextView"
        android:id="@+id/album"
        android:text="@string/album"
        app:layout_constraintStart_toEndOf="@id/leftBorderForText"
        app:layout_constraintTop_toBottomOf="@id/durationName" />
    <TextView
        style="@style/titlesAttributeTextView"
        android:id="@+id/albumName"
        android:text="Yesterday (Remastered 2009)"
        android:ellipsize="end"
        android:lines="1"
        android:maxEms="11"
        app:layout_constraintEnd_toStartOf="@id/rightBorderForText"
        app:layout_constraintTop_toBottomOf="@id/durationTime" />
    <TextView
        style="@style/titlesTextView"
        android:id="@+id/release"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@id/leftBorderForText"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        style="@style/titlesAttributeTextView"
        android:id="@+id/releaseDate"
        android:text="1965"
        app:layout_constraintEnd_toStartOf="@id/rightBorderForText"
        app:layout_constraintTop_toBottomOf="@id/albumName" />
    <TextView
        style="@style/titlesTextView"
        android:id="@+id/genre"
        android:text="@string/genre"
        app:layout_constraintStart_toEndOf="@id/leftBorderForText"
        app:layout_constraintTop_toBottomOf="@id/release" />

    <TextView
        style="@style/titlesAttributeTextView"
        android:id="@+id/genreName"
        android:text="Rock"
        app:layout_constraintEnd_toStartOf="@id/rightBorderForText"
        app:layout_constraintTop_toBottomOf="@id/releaseDate" />

    <TextView
        style="@style/titlesTextView"
        android:id="@+id/country"
        android:text="@string/counry"
        app:layout_constraintStart_toEndOf="@id/leftBorderForText"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_bottom_28dp"/>
    <TextView
        style="@style/titlesAttributeTextView"
        android:id="@+id/counryName"
        android:text="Велекобритания"
        app:layout_constraintEnd_toStartOf="@id/rightBorderForText"
        app:layout_constraintTop_toBottomOf="@id/genreName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_bottom_28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>